deployments/kustomize/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /api/v1/metrics
    prometheus.io/scrape: "true"
  name: furry-train-web-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: furry-train-web-app
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /api/v1/metrics
    prometheus.io/scrape: "true"
  name: furry-train-grpc-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: grpc
    port: 9000
    protocol: TCP
    targetPort: grpc
  selector:
    app: furry-train-grpc-app
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /api/v1/metrics
    prometheus.io/scrape: "true"
  name: furry-train-proxy-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: furry-train-proxy-app
  type: ClusterIP
---
