deployments/kustomize/vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: furry-train-app
spec:
  hosts:
  - "api.shipperizer.org"
  gateways:
  - istio-system/gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/status
    - uri:
        prefix: /api/v1/check
    route:
    - destination:
        port:
          number: 80
        host: furry-train-web-app
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: furry-train-web-app
spec:
  host: furry-train-web-app
  exportTo:
    - "."
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: furry-train-grpc-app
spec:
  host: furry-train-grpc-app
  exportTo:
    - "."
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
