deployments/kustomize/authzPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: furry-train-web-app
spec:
  selector:
    matchLabels:
      app: furry-train-web-app
  action: CUSTOM
  provider:
    # The provider name must match the extension provider defined in the mesh config.
    name: fluffy-octo-telegram-grpc-ext-authz
  rules:
  # The rules specify when to trigger the external authorizer.
  - to:
    - operation:
        paths: ["/api/v0/status"]
